# pathfinding

./: .coveragerc  .gitignore  .pylintrc  NewYork_256.map  README.md  Shanghai_256.map  Specification_document.md  Viikkoraportti_1.md  Viikkoraportti_1.txt  Viikkoraportti_2.md  Viikkoraportti_3.md  pyproject.toml  testing_document.md
additional_scripts/: Milan_256.map  Paris_0_256.map  maptolist.py  output.txt
app/algorithms/: dijkstra.py  network.py  random.py
app/maps/: newyork.py  shanghai.py  simple.py
documentation/: implementation_document.md  testing_document.md  user_manual.md  weekly_report_1.md  weekly_report_4.md  weekly_report_5.md  weekly_report_6.md
maps/: milan.txt  newyork.txt  shanghai.txt
src/: main.py
src/algorithms/: JPS.py  dijkstra.py  graph.py  graph_array.py  kokeilu.py  minheap.py  network.py
src/data/maps/: boston_2_256.py  milan.py  moscow.py  newyork_test.py  paris.py  random_city.py  shanghai.py  simple.py  simple1.py  simple2.py  simple3.py
src/data/performance_test_maps/: newyork_256.py  paris_512.py  sydney_1024.py
src/tests/: performance_test.py
src/tests/integration/: test_integration.py
src/tests/unittests/: test_JPS.py  test_dijkstra.py  test_graph.py  test_graph_array.py  test_minheap.py  test_network.py
util_files/: maptolist.py  output.txt
