[tool.poetry]
name = "pathfinding-poetry"
version = "0"
description = "Pathfinding algorithms project"
authors = ["Julia Rahkonen <juliarahkonen1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.0"
numpy = "^1.21.0"
tkinter = {version = "*", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
coverage = "^7.5.1"
pylint = "^3.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

